fix: plugin - quote, core - wrapToTags function

--- a/src/assets/css/suneditor-contents.css
+++ b/src/assets/css/suneditor-contents.css
@@ -1,10 +1,13 @@
 /* suneditor contents */
 .sun-editor-editable {
-    font-family: Helvetica Neue, sans-serif;
-    font-size: 13px;
     word-break: break-all;
     padding: 10px 20px 10px 20px;
     margin: 0;
+}
+
+.sun-editor-editable * {
+    font-family: Helvetica Neue, sans-serif;
+    font-size: 13px;
 }
 
 /* float */
@@ -47,6 +50,8 @@
     margin-inline-end: 40px;
     border-style: solid;
     border-width: 0;
+    padding-top: 0;
+    padding-bottom: 0;
     padding-left: 20px;
     padding-right: 5px;
     border-left-width: 5px;
